# sedona-tutorial

./: .gitignore  Apache-Sedona-Tutorial.ipynb  README.md  pyproject.toml
install/: docker.sh  local.sh
